# ChangeLog for app-text/epspdf
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/epspdf/ChangeLog,v 1.12 2013/02/15 21:24:37 aballier Exp $

*epspdf-0.6.0 (15 Feb 2013)

  15 Feb 2013; Alexis Ballier <aballier@gentoo.org> +epspdf-0.6.0.ebuild:
  Version bump, rewriten in texlua dropping the ruby dep.

  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> epspdf-0.5.3.ebuild:
  Add ~ppc64, wrt bug #428248

  29 Aug 2012; Anthony G. Basile <blueness@gentoo.org> epspdf-0.5.3.ebuild:
  Keyword ~ppc, bug #428248

  17 Jun 2012; Raúl Porcel <armin76@gentoo.org> epspdf-0.5.3.ebuild:
  Add ~alpha/~ia64/~s390/~sh/~sparc wrt #410239

  22 May 2012; Johannes Huber <johu@gentoo.org> epspdf-0.5.3.ebuild:
  Add ~x86 wrt bug #410239

  09 May 2012; Alexis Ballier <aballier@gentoo.org> epspdf-0.5.3.ebuild:
  RDEPEND on ghostscript-gpl too

  09 May 2012; Alexis Ballier <aballier@gentoo.org> epspdf-0.5.3.ebuild:
  keyword ~amd64-fbsd

  24 Apr 2012; Fabian Groffen <grobian@gentoo.org> epspdf-0.5.3.ebuild:
  Add Prefix keywords, bug #410239

  21 Apr 2012; Markus Meier <maekke@gentoo.org> epspdf-0.5.3.ebuild:
  add ~arm, bug #410239

  03 Apr 2012; Jeroen Roovers <jer@gentoo.org> epspdf-0.5.3.ebuild:
  Marked ~hppa (bug #410239).

  30 Mar 2012; Alexis Ballier <aballier@gentoo.org> epspdf-0.5.3.ebuild:
  keyword ~x86-fbsd

*epspdf-0.5.3 (30 Mar 2012)

  30 Mar 2012; Alexis Ballier <aballier@gentoo.org> +epspdf-0.5.3.ebuild,
  +metadata.xml:
  initial import, ebuild by me for bug #369745
