@@ -4,13 +4,13 @@ Hash: SHA256
 DIST epspdf.0.5.3.tgz 436341 SHA256 71ecbaf5e7fc1e525e865fa98b2f64d64f3c084eafdfee8e3a23203a9c191eba SHA512 fa2a777c0036ba5b1b960064c13ec1dd8f9180258e4f92fd46a5703c90214b154c7e231faada29f6d0da3b02062e8262b20a8a535ccfc702032bf1c07d4131e2 WHIRLPOOL 46e36bdf55925584a66ab00f807a4fcd52df7ae5913aa58be2889a8c7d07bddd00f6c8de54c19b00a9f30063b3ba1dac6e267bb02223d7410d4d29d1a70c6110
 DIST epspdf.0.6.0.tgz 352989 SHA256 8cceb04f011d1583b7257c1d54c491701ccb76c8d7560923f5b24cb5f264b5f5 SHA512 44a7015fa0b7298429567e998068864419fd396f6b0781bf7877c6599d3bb2f254b7a0f976500655851a95d727880d106d9e1df9086306eef74db0b109a63506 WHIRLPOOL f47bb164d4ffb203cb2931921ba8bc04232568560882f1f3c7a5fb51db41e44f26b9c58178cdace2e1d608b3a79fd692ca15c0ca344008992b7109c973a98e49
 EBUILD epspdf-0.5.3.ebuild 1559 SHA256 c735a361ab11ef78dbe69f0b6252edbc94c09365cf2212fc819f46251632bca2 SHA512 16beb30415e80fb35bb0077b531341d8dd4307d88fac87a97cad8c79ec2518e95f493f94367f0d0e085311c9ef2dcdcacc3beff9d76e06db3ef3c6d648d9d266 WHIRLPOOL 0896d6990ddcd9dba98032091014782aec63017ce8d2d7715d57c154e3ac414dd0abaad1a4e865db620a1229166d01d8a8976bd2860990442db77b7217a34aca
-EBUILD epspdf-0.6.0.ebuild 1412 SHA256 2305f637f5491688e3dac36aeef53e77cb29464c40839b53df6f1315f5817f35 SHA512 191ddde6e9172aa1a79d973b652130c911daff61ad9f7a254b63245c0e1a71c7a44f5c0b39040dc5d7c62468cdb4e7cdb99895c94984d053a765265983ad7be5 WHIRLPOOL e9dba7a875a3b57d5d75a4b61ffecdbbcac580ac07f7a5ffbb642a0b715da2f1f7fd19a9cc6362da480fd9d2b60a7581179d33423576f433c84baaf3e845747e
-MISC ChangeLog 1556 SHA256 303e50c369867e7557e59e26011458034d4f7d7be217b44f22a9fd899273ca7f SHA512 e258b4b36619af1c5c19e360a9fb01f977d372491303e04a946b30a87aabb670dfefea3979bebbb0823a0dc0c2853f3c8762bfe7b4a681a4c7ae8a43d969d993 WHIRLPOOL 1ca58497f89e3a8be339261a604c6c5b8252f3489362dbc28b144ce99949ca50658374d1eccc7478da260e46cabc088388eb86c515c24545932c6af00f584bfe
+EBUILD epspdf-0.6.0.ebuild 1406 SHA256 8a050441096ed832e1c9516535267e4ce0236383ada0ea5014c9dc61fc5886e2 SHA512 89cc6e5becc55ae103a3ef9fdd353dea8953cde666d59384c8ade6b009bf8b67f3c57dd7e28115175a4fcd4f9267971dae4d0701e0f4adfa6c648cdf53dd741f WHIRLPOOL 2897e0ce9741a8fa28adddf31976411586c4405f905aba964dade642342055640e6d3175cb3f5bce0778ca0af68d8cf40237677f8dbec7500c663095453e187d
+MISC ChangeLog 1653 SHA256 5fabdc3314bf81f78e0faa29f7ae4ba1068fcf27da5c520b6c86f760071488e6 SHA512 3e9e1ad2fa363eb722eb317431f1b206335859738ddd60c2346dc5f347c581afb3b418f4142f472c7e734f1edd2ff8e61148b2413002c92000bd4914dc050fe2 WHIRLPOOL 8bbc4cabaa7d5b3cd2517acb553162fb503cf4905dc64fb7ce64b40a29cc41ab5bc23ffc4704511de2610394a2cd6cd7e7b4dfe78d8ac7c9ec6fc38f4d8e1602
 MISC metadata.xml 156 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6 SHA512 cecee760dd314c182191a282255f2415e479a8cc6cab9cb664e5b82d52b700a3444aa0d33b30a721a756e432819decc8c92588c769ea6fd33dabe9adc16d75c0 WHIRLPOOL 88a15092b616df72dd0ae91d89c80d852ad49ab9fee8a9688f3a1be59c365cc3dc77e90be68b5c4ec9cc1dc9885e06e723abc96830df4d0628df8c97f8b2a332
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlEep5YACgkQvFcC4BYPU0rfTACgmtDOC0TwGESTMSrZS02I9avK
-k+sAn3qBk4DFsmhq4FxAlQyCIVuajoq8
-=JiTP
+iEYEAREIAAYFAlFuwssACgkQVWmRsqeSphOp6gCfdjhFyT42AiGZvxKLpuDFIrH+
+V0kAnjxBNexgb6Ooi8ixrWj/dqIOBgg2
+=rgJM
 -----END PGP SIGNATURE-----
