@@ -1,6 +1,9 @@
 # ChangeLog for app-text/texlive
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/texlive/ChangeLog,v 1.117 2013/01/21 10:49:09 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/texlive/ChangeLog,v 1.118 2013/04/17 15:43:12 jer Exp $
+
+  17 Apr 2013; Jeroen Roovers <jer@gentoo.org> texlive-2012.ebuild:
+  Stable for HPPA (bug #449298).
 
   21 Jan 2013; Alexis Ballier <aballier@gentoo.org> texlive-2012.ebuild,
   metadata.xml:
