@@ -1,6 +1,9 @@
 # ChangeLog for app-text/epspdf
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/epspdf/ChangeLog,v 1.12 2013/02/15 21:24:37 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/epspdf/ChangeLog,v 1.13 2013/04/17 15:42:02 jer Exp $
+
+  17 Apr 2013; Jeroen Roovers <jer@gentoo.org> epspdf-0.6.0.ebuild:
+  Stable for HPPA (bug #449298).
 
 *epspdf-0.6.0 (15 Feb 2013)
 
